--- a/lainnya/biografi-penulis.tex
+++ b/lainnya/biografi-penulis.tex
@@ -16,4 +16,5 @@
 \end{wrapfigure}
 
 % Ubah kalimat berikut dengan biografi dari mahasiswa
-\name{}, lahir pada 24 Agustus 2002
+\name{}, lahir pada 24 Agustus 2002, merupakan seseorang yang baik hati,
+suka menolong
