--- a/lainnya/daftar-singkatan.tex
+++ b/lainnya/daftar-singkatan.tex
@@ -2,17 +2,15 @@
 \addcontentsline{toc}{chapter}{DAFTAR SINGKATAN}
 \chapter*{DAFTAR SINGKATAN}
 
-\begin{longtable}{|l|l|}
-  \hline
-  \rowcolor[HTML]{C0C0C0}
-  \textbf{Singkatan} & \textbf{Kepanjangan dan deskripsi} \\
-  \hline
-  HTML & HyperText Markup Language \\
-  \hline
-  CSS & Cascading Style Sheets \\
-  \hline
-  API & Application Programming Interface \\
-  \hline
-\end{longtable}
+\begin{center}
+  \begin{tabular}{|l|l|}
+    \hline
+    \rowcolor[HTML]{C0C0C0}
+    \textbf{Singkatan} & \textbf{Kepanjangan} \\
+    \hline
+    VM & \emph{Virtual Machine} \\
+    \hline
+  \end{tabular}
+\end{center}
 
 \cleardoublepage
