--- a/lainnya/kata-pengantar.tex
+++ b/lainnya/kata-pengantar.tex
@@ -26,9 +26,16 @@ Oleh karena itu, penulis mengucapkan terima kasih kepada:
 
   \item Keluarga penulis, Ibu penulis, Bapak penulis dan dua Saudara penulis yang telah 
     memberikan dukungan kepada penulis. \lipsum[3][1-2]
+
+  \item Teman-teman "\emph{Backstreet Boys}"
     
-  \item Teman-teman "Ahmad Dahlan" yang telah memberikan semangat dan dukungan
-    kepada penulis selama pengerjaan.
+  \item Alwan Raihan, Bhatara Arundaya, Orisvio Revanda, S.T., Rayhan Rizky, dan Tigo Yoga
+    selaku teman-teman "Ahmad Dahlan" yang telah memberikan semangat dan dukungan kepada
+    penulis selama pengerjaan.
+
+  \item Adam Daffa, Hanif Setyadi, Muhammad Rafi, Orisvio Revanda, S.T., dan Tio
+    Widayat, S.H., selaku teman "Risin Inti Diing". Terima kasih penulis ucapkan
+    sebesar-besarnya.
 
 \end{enumerate}
 
