--- a/lainnya/lembar-pengesahan-en.tex
+++ b/lainnya/lembar-pengesahan-en.tex
@@ -17,7 +17,7 @@
 \begin{center}
   \textbf{FINAL PROJECT}
   \\Submitted to fulfill one of the requirements \\
-  for obtaining a degree Bachelor of Engineering at \\
+  for obtaining a degree Bachelor of Computer at \\
   Undergraduate Study Program of \engstudyprogram{} \\
   Department of \engdepartment{} \\
   Faculty of \engfaculty{} \\
