--- a/lainnya/lembar-pengesahan.tex
+++ b/lainnya/lembar-pengesahan.tex
@@ -3,8 +3,7 @@
   \textbf{LEMBAR PENGESAHAN}
 \end{center}
 
-% Menyembunyikan nomor halaman
-\thispagestyle{empty}
+\addcontentsline{toc}{chapter}{LEMBAR PENGESAHAN}
 
 \begin{center}
   \textbf{\tatitle{}}
@@ -17,7 +16,7 @@
 \begin{center}
   \textbf{TUGAS AKHIR}
   \\Diajukan untuk memenuhi salah satu syarat \\
-  memperoleh gelar Sarjana Teknik pada \\
+  memperoleh gelar Sarjana Komputer pada \\
   Program Studi S-1 \studyprogram{} \\
   Departemen \department{} \\
   Fakultas \faculty{} \\
@@ -66,16 +65,8 @@
 \endgroup
 
 \begin{center}
-  Mengetahui, \\
-  Kepala Departemen \department{} \facultyshort{} - ITS\\
-
-  \vspace{8ex}
-
-  \underline{\headofdepartment{}.} \\
-  NIP. \headofdepartmentnip{}
-\end{center}
-
-\begin{center}
   \textbf{\MakeUppercase{\place{}}\\\MONTH{}, \the\year{}}
 \end{center}
 \endgroup
+
+\vspace*{\fill}
