--- a/lainnya/pernyataan-keaslian.tex
+++ b/lainnya/pernyataan-keaslian.tex
@@ -3,8 +3,7 @@
   \textbf{PERNYATAAN ORISINALITAS}
 \end{center}
 
-% Menyembunyikan nomor halaman
-\thispagestyle{empty}
+\addcontentsline{toc}{chapter}{PERNYATAAN ORISINALITAS}
 
 \vspace{2ex}
 
