--- a/pustaka/tanda-hubung.tex
+++ b/pustaka/tanda-hubung.tex
@@ -8,4 +8,18 @@
   ber-so-si-al-i-sa-si
   peng-hu-bung
   pro-ses
+  No-pem-ber
+  ber-na-ma
+  di-kem-bang-kan
+  klas-ter
+  ge-ne-rik
+  kon-ku-ren-si
+  ku-be-con-trol-ler-ma-na-ger
+  be-ri-kut
+  per-be-da-an
+  se-per-ti
+  me-mu-dah-kan
+  le-bih
+  peng-gu-na-an
+  Peng-gu-na-an
 }
