--- a/pustaka/variables.tex
+++ b/pustaka/variables.tex
@@ -43,7 +43,7 @@
 
 % departemen
 \newcommand{\department}{Teknik Informatika}
-\newcommand{\engdepartment}{Informatics}
+\newcommand{\engdepartment}{Informatics Engineering}
 
 % kode mata kuliah
 \newcommand{\coursecode}{EF234801}
