--- a/sampul/konten-en.tex
+++ b/sampul/konten-en.tex
@@ -20,7 +20,7 @@
 \vspace{\fill}
 
 \begin{large}
-  \textmd{Advisor} \\
+  \textmd{Advisors} \\
   \advisor{} \\
   \textmd{NIP \advisornip{}} \\
   \coadvisor{} \\
