--- a/bab/3-metodologi.tex
+++ b/bab/3-metodologi.tex
@@ -1,17 +1,13 @@
-\chapter{DESAIN DAN IMPLEMENTASI}
-\label{chap:desainimplementasi}
+\chapter{METODOLOGI}
+\label{chap:metodologi}
 
-% Ubah bagian-bagian berikut dengan isi dari desain dan implementasi
-
-Penelitian ini dilaksanakan sesuai dengan 
-
-\section{Deskripsi Sistem}
+\section{Perancangan Arsitektur Sistem}
 \label{sec:deskripsisistem}
 
 Sistem akan dibuat dengan
 
-\section{Implementasi Alat
-  \label{sec:implementasi alat}}
+\section{Bahan dan Peralatan yang Digunakan}
+\label{sec:implementasi alat}
 
 Alat diimplementasikan dengan
 
